# binaryAttributeMorphology

./: CMakeLists.txt  TODO.txt  attrib_unique.cxx  attribute_position.cxx  attribute_values.cxx  attribute_values_test.cxx  binary_closing_by_reconstruction.cxx  binary_fillhole.cxx  binary_grind_peak.cxx  binary_keep_n_objects.cxx  binary_opening_by_reconstruction.cxx  binary_reconstruction.cxx  binary_reconstruction_by_erosion.cxx  binary_shape_keep_n_objects.cxx  binary_shape_opening.cxx  binary_size_opening.cxx  binary_statistics_keep_n_objects.cxx  binary_statistics_opening.cxx  change_region.cxx  check.cxx  eq_attrib_unique.cxx  example.py  generic_attribute.cxx  itkAggregateLabelMapFilter.h  itkAggregateLabelMapFilter.txx  itkAttributeKeepNObjectsLabelCollectionImageFilter.h  itkAttributeKeepNObjectsLabelCollectionImageFilter.txx  itkAttributeKeepNObjectsLabelMapFilter.h  itkAttributeLabelObject.h  itkAttributeOpeningLabelCollectionImageFilter.h  itkAttributeOpeningLabelCollectionImageFilter.txx  itkAttributeOpeningLabelMapFilter.h  itkAttributePositionLabelMapFilter.h  itkAttributePositionLabelMapFilter.txx  itkAttributeRelabelImageFilter.h  itkAttributeRelabelImageFilter.txx  itkAttributeRelabelLabelCollectionImageFilter.h  itkAttributeRelabelLabelCollectionImageFilter.txx  itkAttributeRelabelLabelMapFilter.h  itkAttributeRelabelLabelMapFilter.txx  (+268 more)
Wrapping/: CMakeLists.txt  WrapITKTypes.cmake  wrap_ITKLabelCollectionImageBase.cmake  wrap_ITKLabelMapBase.cmake  wrap_itkBinaryImageToLabelCollectionImageFilter.cmake  wrap_itkBinaryPhysicalSizeOpeningImageFilter.cmake  wrap_itkBinaryRegionElongationKeepNObjectsImageFilter.cmake  wrap_itkBinaryRegionElongationOpeningImageFilter.cmake  wrap_itkBinarySizeKeepNObjectsImageFilter.cmake  wrap_itkBinarySizeOpeningImageFilter.cmake  wrap_itkBinarySizeRegionRatioKeepNObjectsImageFilter.cmake  wrap_itkBinarySizeRegionRatioOpeningImageFilter.cmake  wrap_itkInPlaceLabelCollectionImageFilter.cmake  wrap_itkLabelCollectionImage.cmake  wrap_itkLabelCollectionImageFilter.cmake  wrap_itkLabelCollectionImageToBinaryImageFilter.cmake  wrap_itkLabelCollectionImageToLabelImageFilter.cmake  wrap_itkLabelCollectionImageToMaskImageFilter.cmake  wrap_itkLabelImageToLabelCollectionImageFilter.cmake  wrap_itkLabelMapFilter.cmake  wrap_itkLabelMapToMaskImageFilter.cmake  wrap_itkLabelMaximumKeepNObjectsImageFilter.cmake  wrap_itkLabelMaximumOpeningImageFilter.cmake  wrap_itkLabelMeanKeepNObjectsImageFilter.cmake  wrap_itkLabelMeanOpeningImageFilter.cmake  wrap_itkLabelMedianKeepNObjectsImageFilter.cmake  wrap_itkLabelMedianOpeningImageFilter.cmake  wrap_itkLabelMinimumKeepNObjectsImageFilter.cmake  wrap_itkLabelMinimumOpeningImageFilter.cmake  wrap_itkLabelPhysicalSizeOpeningImageFilter.cmake  wrap_itkLabelRegionElongationKeepNObjectsImageFilter.cmake  wrap_itkLabelRegionElongationOpeningImageFilter.cmake  wrap_itkLabelSigmaKeepNObjectsImageFilter.cmake  wrap_itkLabelSigmaOpeningImageFilter.cmake  wrap_itkLabelSizeKeepNObjectsImageFilter.cmake  wrap_itkLabelSizeOpeningImageFilter.cmake  wrap_itkLabelSizeRegionRatioKeepNObjectsImageFilter.cmake  wrap_itkLabelSizeRegionRatioOpeningImageFilter.cmake  wrap_itkLabelSumKeepNObjectsImageFilter.cmake  wrap_itkLabelSumOpeningImageFilter.cmake  (+56 more)
Wrapping/itk-4.0/: wrap_itkShapePositionLabelMapFilter.cmake
article/: Article.tex  Makefile
itk-3.15/: itkLabelMap.h  itkShapeLabelMapFilter.txx  itkStatisticsLabelMapFilter.h
itk-4.0/: itkBinaryFillholeImageFilter.txx  itkBinaryGrindPeakImageFilter.txx  itkBinaryReconstructionByDilationImageFilter.txx  itkBinaryReconstructionLabelMapFilter.h  itkLabelMapContourOverlayImageFilter.h  itkLabelMapMaskImageFilter.h  itkLabelMapMaskImageFilter.txx  itkLabelMapOverlayImageFilter.h  itkLabelUniqueLabelMapFilter.h  itkObjectByObjectLabelMapFilter.h  itkObjectByObjectLabelMapFilter.txx  itkShapePositionLabelMapFilter.h  itkShapePositionLabelMapFilter.txx  itkStatisticsPositionLabelMapFilter.txx
stat_templates/: itkLabelXXXKeepNObjectsImageFilter.h  itkLabelXXXOpeningImageFilter.h  itkXXXKeepNObjectsLabelCollectionImageFilter.h  itkXXXOpeningLabelCollectionImageFilter.h  itkXXXRelabelImageFilter.h  itkXXXRelabelLabelCollectionImageFilter.h  wrap_itkLabelXXXKeepNObjectsImageFilter.cmake  wrap_itkLabelXXXOpeningImageFilter.cmake  wrap_itkXXXKeepNObjectsLabelCollectionImageFilter.cmake  wrap_itkXXXOpeningLabelCollectionImageFilter.cmake  wrap_itkXXXRelabelImageFilter.cmake  wrap_itkXXXRelabelLabelCollectionImageFilter.cmake
templates/: install_template.sh  itkBinaryXXXKeepNObjectsImageFilter.h  itkBinaryXXXOpeningImageFilter.h  itkLabelXXXKeepNObjectsImageFilter.h  itkLabelXXXOpeningImageFilter.h  itkXXXKeepNObjectsLabelCollectionImageFilter.h  itkXXXOpeningLabelCollectionImageFilter.h  itkXXXRelabelImageFilter.h  itkXXXRelabelLabelCollectionImageFilter.h  wrap_itkBinaryXXXKeepNObjectsImageFilter.cmake  wrap_itkBinaryXXXOpeningImageFilter.cmake  wrap_itkLabelXXXKeepNObjectsImageFilter.cmake  wrap_itkLabelXXXOpeningImageFilter.cmake  wrap_itkXXXRelabelImageFilter.cmake
